--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Curriculum Vitae</title>
     </head>
-    <body></body>
+    <body>
+        <main class="cv_main"></main>
+    </body>
 </html>
