feat: html header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         <title>Curriculum Vitae</title>
     </head>
     <body>
-        <main class="cv_main"></main>
+        <main class="cv_main">
+            <header class="cv_header">
+                <h1 class="cv_header__name">Ivan Arkaev</h1>
+                <aside class="cv_header__contacts">
+                    <h2 class="cv_subtitle">Contacts</h2>
+                    <ul class="cv_list"></ul>
+                </aside>
+            </header>
+        </main>
     </body>
 </html>
