feat: html sections
- summary
- skills
- examples
- experience
- education
- english

--- a/index.html
+++ b/index.html
@@ -15,5 +15,23 @@
                 </aside>
             </header>
         </main>
+        <section class="cv_section">
+            <h2 class="cv_subtitle">Summary</h2>
+        </section>
+        <section class="cv_section">
+            <h2 class="cv_subtitle">Skills</h2>
+        </section>
+        <section class="cv_section">
+            <h2 class="cv_subtitle">Examples</h2>
+        </section>
+        <section class="cv_section">
+            <h2 class="cv_subtitle">Experience</h2>
+        </section>
+        <section class="cv_section">
+            <h2 class="cv_subtitle">Education</h2>
+        </section>
+        <section class="cv_section">
+            <h2 class="cv_subtitle">English</h2>
+        </section>
     </body>
 </html>
